@@ -4,8 +4,8 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     17/03/2001
-## RCS-ID:      $Id: typemap,v 1.10 2004/12/21 21:12:53 mbarbon Exp $
-## Copyright:   (c) 2001, 2003-2004 Mattia Barbon
+## RCS-ID:      $Id: typemap,v 1.11 2006/08/20 09:25:20 mbarbon Exp $
+## Copyright:   (c) 2001, 2003-2004, 2006 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -21,6 +21,7 @@ wxHtmlHelpController *  O_WXOBJECT
 wxBestHelpController *  O_WXOBJECT
 
 wxHtmlEasyPrinting *    O_NON_WXOBJECT
+wxHtmlDCRenderer *	O_NON_WXOBJECT
 
 wxPrintData *           O_WXOBJECT
 wxPageSetupDialogData * O_WXOBJECT
